tests/NormalTests/paczka2/big_fuzzy/73807367.err
Error in line 2: w7P7Pi A593 8,5
Error in line 5: w7P7Pi A831 6,4
Error in line 12: w7P7Pi A851 96,5
Error in line 20: znoKiIo0o A831 87,21
Error in line 32: znoKiIo0o S285 92,9
Error in line 33: Pj4tLT A831 63,2
Error in line 38: Pj4tLT A593 80,2
Error in line 41: Pj4tLT A851 29,7
Error in line 36: wDolX8VZ A593 52,5
Error in line 48: wDolX8VZ S285 79,0
Error in line 52: S285 A831 82,1
Error in line 58: S285 A851 92,3
Error in line 62: S285 A831 43,3
Error in line 66: Pj4tLT A851 17,3
Error in line 72: znoKiIo0o A593 93,1
Error in line 83: qsSklLyzpl A851 37,64
Error in line 82: fpA9zSWu A831 86,9
Error in line 88: znoKiIo0o A851 28,5
Error in line 89: fpA9zSWu A593 40,6
Error in line 87: S285 S285 18,6
Error in line 77: qsSklLyzpl A593 28,7
Error in line 101: znoKiIo0o S285 70,7
Error in line 102: znoKiIo0o A851 1,6
Error in line 98: qsSklLyzpl A851 38,1
Error in line 106: qsSklLyzpl A593 81,4
Error in line 104: znoKiIo0o A593 64,7
Error in line 108: qsSklLyzpl A831 47,3
Error in line 119: wDolX8VZ A593 20,6
Error in line 128: fpA9zSWu A593 76,2
Error in line 127: znoKiIo0o A851 31,7
Error in line 134: znoKiIo0o S285 7,2
Error in line 150: Pj4tLT S285 52,47
Error in line 142: S285 A851 64,2
Error in line 147: Pj4tLT S285 55,5
Error in line 159: fpA9zSWu A593 179,4
Error in line 161: qsSklLyzpl A851 84,8
Error in line 166: S285 S285 195,4
Error in line 183: w7P7Pi A851 3,8
Error in line 187: S285 A851 3,8
Error in line 194: S285 S285 3,9
Error in line 196: S285 A593 52,5
Error in line 198: fpA9zSWu A831 171,3
Error in line 205: wDolX8VZ A593 87,0
Error in line 208: fpA9zSWu A593 1,1
Error in line 216: S285 S285 7,6
Error in line 218: S285 A831 15,7
Error in line 226: S285 A831 82,4
Error in line 222: qsSklLyzpl A831 42,3
Error in line 236: Pj4tLT A831 50,0
Error in line 239: Pj4tLT S285 34,9
